--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --config nodemon.json src/app.ts"
+    "test": "jest",
+    "dev": "nodemon --config nodemon.json src/app.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +32,7 @@
     "jwks-rsa": "^3.1.0",
     "mongoose": "^8.5.0",
     "nanoid": "^3.3.7",
+    "react-router-dom": "^6.25.1",
     "redis": "^4.6.15",
     "ts-node-dev": "^2.0.0",
     "yup": "^1.4.0"
@@ -44,10 +46,11 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.12",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.0",
+    "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
