--- a/backend/package.json
+++ b/backend/package.json
@@ -33,8 +33,11 @@
     "jwks-rsa": "^3.1.0",
     "mongoose": "^8.5.0",
     "nanoid": "^3.3.7",
+    "openapi-types": "^12.1.3",
     "react-router-dom": "^6.25.1",
     "redis": "^4.6.15",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "yup": "^1.4.0"
   },
@@ -48,6 +51,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.12",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0",
